--- a/style.css
+++ b/style.css
@@ -1,20 +1,67 @@
+/* CSS Reset */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+
 body {
+   background-color: #000000;
+   color: #91d8cb;
+}
+
+#main {
+   margin: 0 30%;
+   border-left: 1pt solid white;
+   border-right: 1pt solid white;
    background-color: #130032;
-   color: #91d8cb
+   top: 0;
 }
 
-.notification {
-   background-color: yellow;
-   color: brown;
-   font-size: small;
-   width: 20%;
-   margin: auto;
-   border: 3px solid brown;
+h1 {
+   font-size: 20pt;
 }
 
-.notification h1 {
-   font-size: medium;
-   color: red;
+a {
+   text-decoration: none;
+   color: #b3132f;
+}
+
+.nav {
+   list-style-type: none;
+   margain: 0;
+   padding: 0;
+   display: flex;
+}
+
+.nav li a {
+   display: block;
+   color: #79aeeb;
    text-align: center;
+   padding: 5px 5px;
+   text-decoration: none;
 }
 
+.nav li a:hover {
+   background-color: #003b3b;
+}
+
+#active {
+   color: #00b6cb;
+   background-color: #000d3c;
+}
