--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://github.com/j4nty/fonts/Bagnard/Bagnard.css');
-
 /* CSS Reset */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -25,23 +23,24 @@ time, mark, audio, video {
 body {
    background-color: #000000;
    color: #91d8cb;
-   font-family: 'Bagnard', 'serif';
+   font-family: 'Courier New', 'monospace';
 }
 
 #main {
    margin: 0 30%;
    padding: 12pt;
    border: 1pt solid #00a2a3;
+   border-radius: 5pt;
    background-color: #130032;
    top: 0;
 }
 
-h1, h2, h3 {
-   margin: 5pt;
-}
 
 h1 {
+   color: #46a6c1;
    font-size: 20pt;
+   font-weight: 500;
+   margin-bottom: 5pt;
 }
 
 a {
@@ -71,4 +70,10 @@ a {
 #active {
    color: #00b6cb;
    background-color: #000d3c;
+}
+
+footer {
+   position: fixed;
+   bottom: 10px;
+   color: white;
 }
