--- a/style.css
+++ b/style.css
@@ -26,13 +26,26 @@ body {
    font-family: 'Courier New', 'monospace';
 }
 
-#main {
-   margin: 0 30%;
-   padding: 12pt;
-   border: 1pt solid #00a2a3;
-   border-radius: 5pt;
-   background-color: #130032;
-   top: 0;
+@media only screen and (orientation: landscape){
+   #main {
+      margin: 0 30%;
+      padding: 12pt;
+      border: 1pt solid #00a2a3;
+      border-radius: 5pt;
+      background-color: #130032;
+      top: 0;
+   }
+}
+
+@media only screen and (orientation: portrait){
+   #main {
+      padding: 12pt;
+      margin: 0 5pt;
+      border: 1pt solid #00a2a3;
+      border-radius: 5pt;
+      background-color: #130032;
+      top: 0;
+   }
 }
 
 
